--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,10 @@
 spring:
   datasource:
     url: "jdbc:mysql://localhost/moromoro"
-    username: "hanul2"
-    password: "1234"
+    username: "root"
+#    username: "hanul2"
+    password: ""
+#    password: "1234"
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
